Set table layout to fixed and add hidden overflow to table cells
https://coveord.atlassian.net/browse/JSUI-1391

--- a/sass/_Result.scss
+++ b/sass/_Result.scss
@@ -207,6 +207,8 @@
     padding: .5em 0;
     white-space: nowrap;
     border-bottom: $default-border;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
